src/objects/BPRelated_Data_Asset__c.object
<CustomObject>
    <description>Related Data Asset junction object between Data Asset &amp; Business Planning objects</description>
    <fields>
        <fullName>RWD_Data_Asset__c</fullName>
        <label>RWD Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipName>RWE_BPRelated_Data_Assets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RWE_Business_Planning__c</fullName>
        <label>RWE Business Planning</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Asset_TF__c</fullName>
        <description>checks that a Unique junction record exists between a BP &amp; a Data Asset</description>
        <label>Unique_Asset_TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RWE Related Data Asset(BP)</label>
    <nameField>
        <displayFormat>BP-DA-{00000}</displayFormat>
        <label>Related Data Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Related Data Assets(BP)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>